--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -1,39 +1,63 @@
 <div class="auth-page">
+  <div class="background-decor"></div>
   <div class="container page">
-    <div class="row">
-      <div class="col-md-6 offset-md-3 col-xs-12">
-        <h1 class="text-xs-center">Sign up</h1>
-        <p class="text-xs-center">
-          <a routerLink="/login">Have an account?</a>
-        </p>
+    <div class="row justify-content-center align-items-center min-vh-100">
+      <div class="col-md-7 d-none d-md-block">
+        <div class="welcome-side text-center">
+          <h2>Welcome to KBTUklassniki!</h2>
+          <p class="lead">Create an account, join conversations, and stay connected with others.</p>
+        </div>
+      </div>
 
-        <app-error-message [errors]="errors()"></app-error-message>
+      <div class="col-md-5 col-xs-12">
+        <div class="card p-5 shadow-lg glass-card">
+          <h1 class="text-center mb-4">Sign up</h1>
+          <p class="text-center mb-4">
+            <a routerLink="/login">Already have an account?</a>
+          </p>
 
-        @if (successDisplayed()) {
-          <ul class="success-messages">
-            <li>Registration successful. Redirecting to login page...</li>
-          </ul>
-        }
+          <app-error-message [errors]="errors()"></app-error-message>
 
-        <form [formGroup]="mainForm">
-          <fieldset class="form-group">
-            <input formControlName="username" class="form-control form-control-lg" type="text" placeholder="Username" />
-            <app-error-message [form]="mainForm.controls.username"></app-error-message>
-          </fieldset>
+          <form [formGroup]="mainForm">
+            <fieldset class="form-group mb-4">
+              <input
+                formControlName="username"
+                class="form-control"
+                type="text"
+                placeholder="👤 Username"
+              />
+              <app-error-message [form]="mainForm.controls.username"></app-error-message>
+            </fieldset>
 
-          <fieldset class="form-group">
-            <input formControlName="email" class="form-control form-control-lg" type="text" placeholder="Email" />
-            <app-error-message [form]="mainForm.controls.email"></app-error-message>
-          </fieldset>
+            <fieldset class="form-group mb-4">
+              <input
+                formControlName="email"
+                class="form-control"
+                type="text"
+                placeholder="📧 Email"
+              />
+              <app-error-message [form]="mainForm.controls.email"></app-error-message>
+            </fieldset>
 
-          <fieldset class="form-group">
-            <input formControlName="password" class="form-control form-control-lg" type="password" placeholder="Password" />
-            <app-error-message [form]="mainForm.controls.password"></app-error-message>
-          </fieldset>
+            <fieldset class="form-group mb-4">
+              <input
+                formControlName="password"
+                class="form-control"
+                type="password"
+                placeholder="🔒 Password"
+              />
+              <app-error-message [form]="mainForm.controls.password"></app-error-message>
+            </fieldset>
 
-          <button [disabled]="!mainForm.valid" (click)="registerUser()"
-                  class="btn btn-lg btn-primary pull-xs-right">Sign up</button>
-        </form>
+            <button
+              [disabled]="!mainForm.valid"
+              (click)="registerUser()"
+              class="btn btn-lg btn-primary w-100"
+            >
+              Sign up
+            </button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
